fix z-index of bg

--- a/src/App.css
+++ b/src/App.css
@@ -22,6 +22,7 @@ body {
   flex-direction: column;
   justify-content: space-between;
   width: 100%;
+  z-index: 1;
 }
 
 header {
